# controller/request.js
@@ -1,4 +1,4 @@
-const student = require('../models/studentdb')
+const rooms = require('../models/roomdb')
 const connect = require('../models/mongoose')
 
 class request {
@@ -6,57 +6,69 @@ class request {
 
 //--------------------------------------------------------------------------------------------------------------------------------------------------------   
 
-    //login with username@cskmitl.ac.th + password
-    async loginWithEmail(req) {
-        var functionname = "[loginWithEmail]"
+    //create new Rooms
+    async createNewRooms(req) {
+        var functionname = "[CreateNewRooms]"
 
-        var str = req.Email
-        var splitted = str.split('@');
-        var SID = splitted[0]; 
-        var Email = splitted[1];
+        var Rooms = new rooms ({
+            RID :req.RID,
+            Firstname:req.Firstname,
+            Lastname: req.Lastname,
+            Status: req.Status
+        })
 
-        //เช็คว่า Domain คือ cskmitl.ac.th หรือเปล่า
-        if(Email !== "cskmitl.ac.th"){
-            return `${functionname} Wrong Domain `
-        }else{   
-        }
-
-        //เช็คว่ามี SID นี้ใน DB หรือเปล่า
-        var resultcheckID = await new connect().checkexist({ SID }, "studentdb")
-        if (resultcheckID) {
+        //Check RID in DB
+        var resultcheckID = await new connect().checkexist({ RID :req.RID }, "roomdb")
+        var All_Readyrooms = await new connect().get({  }, "roomdb")
+        console.log(resultcheckID) //false คือ ไม่เจอ
+        if (!resultcheckID) {
         } else {
-            return `${functionname} SID not found `
+            return `${functionname} RID already Exist ,RID now are ${All_Readyrooms.length}`
         }
         
-        //เช็คPassword ในDB ว่า ตรงกับ Password ที่กรอกมาไหม
-        var resultInfo = await new connect().get({ SID }, "studentdb")
-        if (resultInfo[0].Password == req.Password ) {
-        } else {
-            return `${functionname} Wrong Password `
-        }
-        
-        //เช็ค status ว่า login หรือยัง
-        if(resultInfo[0].Status == "ยังไม่เข้าสู่ระบบ"){
-            var resultStatus = await new connect().update({SID },
-                { 
-                    Status:"เข้าสู่ระบบแล้ว"
-                    
-                },'studentdb')   
-        }else{
-            return `${functionname} You already Login `
-        }
-        return `${functionname} Login Successfully `
+        await Rooms.save()
+        return `${functionname}  Successfully `
     }
 
+
+    //--------------------------------------------------------------------------------------------------------------------------------------------------------
+
+    async editRooms(req) {
+        var functionname = "[EditRooms]"
+
+        var Rooms = new rooms ({
+            RID :req.RID,
+            Firstname:req.Firstname,
+            Lastname: req.Lastname,
+            Status: req.Status
+        })
+
+        //Check RID in DB
+        var resultcheckID = await new connect().checkexist({ RID :req.RID }, "roomdb")
+        console.log(resultcheckID) //false คือ ไม่เจอ
+        if (resultcheckID) {
+            var resultRooms = await new connect().update({ RID :req.RID },
+                { 
+                    Firstname:req.Firstname,
+                    Lastname: req.Lastname,
+                    Status: req.Status
+                    
+                },'roomdb')   
+        } else {
+            return `${functionname} RID not found`
+        }
+
+        return `${functionname}  Successfully `
+    }
 
 //--------------------------------------------------------------------------------------------------------------------------------------------------------
 
     //getAll_Login
-    async getAll_Login(req) {
-        var resultAllLogin = await new connect().get({ Status: "เข้าสู่ระบบแล้ว" }, "studentdb")
-        var numberAllLogin = resultAllLogin.length;
+    async getAll_Readyrooms(req) {
+        var All_Readyrooms = await new connect().get({ Status: "Ready" }, "roomdb")
+        var totalAll_Readyrooms = All_Readyrooms.length;
 
-        return  numberAllLogin
+        return  totalAll_Readyrooms
     }
 
 
@@ -65,26 +77,36 @@ class request {
 //--------------------------------------------------------------------------------------------------------------------------------------------------------
 
     //getAll_notLogin
-    async getAll_notLogin(req) {
-        var resultAllnotLogin = await new connect().get({ Status: "ยังไม่เข้าสู่ระบบ" }, "studentdb")
-        var numberAllnotLogin = resultAllnotLogin.length;
+    async getAll_Pendingrooms(req) {
+        var All_Pendingrooms = await new connect().get({ Status: "Pending" }, "roomdb")
+        var totalAll_Pendingrooms = All_Pendingrooms.length;
 
-        return  numberAllnotLogin
+        return  totalAll_Pendingrooms
+    }
+
+
+//--------------------------------------------------------------------------------------------------------------------------------------------------------
+
+    //getAll_notLogin
+    async getAll_NotReadyrooms(req) {
+        var All_NotReadyrooms = await new connect().get({ Status: "NotReady" }, "roomdb")
+        var totalAll_NotReadyrooms = All_NotReadyrooms.length;
+
+        return  totalAll_NotReadyrooms
     }
 //--------------------------------------------------------------------------------------------------------------------------------------------------------
 
     //getAll_notLogin
-    async getName_notLogin(req) {
-        var resultAllnotLogin = await new connect().get({ Status: "ยังไม่เข้าสู่ระบบ" }, "studentdb")
+    async getName_Readyrooms(req) {
+        var Readyrooms = await new connect().get({ Status: "Ready" }, "roomdb")
         var resultNameAsArray = []
-        var numberAllnotLogin = resultAllnotLogin.length;
 
-        for(var i = 0 ; i<numberAllnotLogin;i++ ){
-            var nameAllnotLogin = resultAllnotLogin[i].Firstname
-            var resultName = {
-                Name : nameAllnotLogin
+        for(var i = 0 ; i<Readyrooms.length;i++ ){
+            var result = {
+                RID : Readyrooms[i].RID,
+                Firstname : Readyrooms[i].Firstname
             }
-            resultNameAsArray.push(resultName)
+            resultNameAsArray.push(result)
 
         }
 
@@ -95,22 +117,25 @@ class request {
     
 //--------------------------------------------------------------------------------------------------------------------------------------------------------
 
-async getAllData(req) {
+async getReportData(req) {
    
-    var All_Login = await new request().getAll_Login();
+    var All_Readyrooms = await new request().getAll_Readyrooms();
 
-    var All_notLogin = await new request().getAll_notLogin();
+    var All_Pendingrooms = await new request().getAll_Pendingrooms();
 
-    var AllName_notLogin = await new request().getName_notLogin();
+    var All_NotReadyrooms = await new request().getAll_NotReadyrooms();
 
-    var result = {
-        All_Login,
-        All_notLogin,
-        AllName_notLogin
+    var Name_Readyrooms = await new request().getName_Readyrooms();
+
+    var report = {
+        All_Readyrooms,
+        All_Pendingrooms,
+        All_NotReadyrooms,
+        Name_Readyrooms
     }
 
 
-    return result
+    return report
 }
 
 //--------------------------------------------------------------------------------------------------------------------------------------------------------
